--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ input:focus {
   border-radius: 50px;
   margin-top: 1em;
   color: #fff;
-  background: #ff8d5c;
+  background: #dfc1c5;
   font-size: 1em;
   align-self: center;
   outline: none;
